# axum-hammer

./: Cargo.toml  README.md  batch.sh  plot.py
.github/workflows/: test.yml
hammer/: Cargo.toml
hammer/src/: buffered_tasks.rs  main.rs  tasks.rs
nail/: Cargo.toml
nail/src/: consts.rs  main.rs  sleep.rs  subpages.rs  types.rs
