[package]
name = "axum-hammer"
version = "0.1.0-dev"
edition.workspace = true
rust-version.workspace = true
description = "Concurrently hammer on a server"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]

[dev-dependencies]

[lints]
workspace = true
