[package]
name = "axum-hammer"
version = "0.1.0-dev"
edition.workspace = true
rust-version.workspace = true
description = "Concurrently hammer on a server"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
futures-util = { version = "0.3.30", default-features = false, features = ["std"] }
reqwest = "0.12.4"
statrs = "0.16.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync"] }
url = "2.5.0"

[dev-dependencies]
rstest = { version = "0.19.0", default-features = false }

[lints]
workspace = true
