[package]
name = "axum-nail"
version = "0.1.0-dev"
edition.workspace = true
rust-version.workspace = true
description = "Axum server MVCE to concurrently hammer on"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = { version = "4.5.4", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
rand = "0.8.5"
serde = { version = "1.0.202", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time", "time"] }

[dev-dependencies]

[lints]
workspace = true
